@@ -1,6 +1,7 @@
 NOCC 1.5  ?? ??, ??
 
   Misc
+    * Remove nested table from inbox opts menu (Tim Gerundt).
     * Change the way language list is displayed (Arnaud Boudou).
     * Welsh translation added (Sion Pennant).
     * Fix issues with server self provided details on login page
